# website

./: .gitignore  .gitmodules  hugo.toml  pyproject.toml
.github/workflows/: deploy.yml
content/: _index.md
content/bio/: index.md
content/blog/: coroutines.md  hello-world.md
content/cv/: index.md
content/notes/: 2026-06-11-first-note.md
content/presentations/: index.md
content/publications/: index.md
content/research/: index.md
content/software-development/: index.md
cv/: config.yaml
data/: professional.yaml
docs/: linkedin-setup.md
layouts/: 404.html
layouts/_default/: baseof.html  list.html
layouts/bio/: single.html
layouts/blog/: list.html  single.html
layouts/notes/: single.html
layouts/partials/: site-footer.html  site-header.html
layouts/research/: list.html  single.html
scripts/: build.sh  dev.sh  generate_bibliography.py  migrate_from_latex.py  post_to_linkedin.py  requirements.txt  verify_migration.py
scripts/lib/: bibtex_parser.py  cv_config.py  latex_parser.py  schema.py
scripts/tests/: test_post_to_linkedin.py
scripts/tests/fixtures/: blog_post.md  custom_summary.md  draft_post.md  no_linkedin.md
static/css/: main.css
static/js/: nav.js
tests/: test_bibtex_parser.py  test_cv_config.py  test_latex_parser.py  test_schema.py
tests/fixtures/: cv_config_minimal.yaml  cv_config_valid.yaml  education_dual_variant.yaml  full_valid.yaml  incomplete.yaml  invalid_missing_required.yaml  minimal_valid.yaml
