[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vyasrcom-scripts"
version = "0.1.0"
dependencies = [
    "pydantic>=2.0",
    "ruamel.yaml",
    "pylatexenc",
    "bibtexparser>=2.0.0b9",
    "professional-data",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
