[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vyasrcom-scripts"
version = "0.1.0"
dependencies = [
    "bibtexparser>=2.0.0b9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
